applications/openlookeng.io/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  name: repo-ingress
spec:
  tls:
    - hosts:
        - repo.mindspore.cn
      secretName: repo-tls
  rules:
    - host: repo.mindspore.cn
      http:
        paths:
          - backend:
              serviceName: repo-service
              servicePort: 80
            path: /
